2003-05-28  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-04-14  Dani Carbonell  <bocata@panete.net>

	* icons/ added to CVS
	
	* Makefile.am: added "icons" to SUBDIRS
	* configure.in: added the "icons" directory

	* src/Makefile.am: changed PIXMAPSDIR constant

	* src/commands.c: changed the toolbar icons

	* src/partyline.c (partyline_update_channel_list): update the channel
	list only if we're connected.
	(partyline_show_channel_list): update the list when it's enabled.

	* src/winlist.c: use pretty icons instead of that ugly 'T'.

	* src/images/Makefile.am: added new icons to EXTRA_DIST

2003-04-14  Jordi Mallach  <jordi@sindominio.net>

	* src/dialogs.c (connectdialog_new):
	(prefdialog_new): added mnemonics to the labels

2003-04-14  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated.

	* configure.in: released gtetrinet 0.7.1.

2003-04-10  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c (partyline_page_new): Removed a unused variable.
	Fixed #110447.

2003-04-10  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: removed call to AM_GNU_GETTEXT.

2003-04-09  Dani Carbonell  <bocata@panete.net>

	* gtetrinet.schemas.in: added a new schema for the Enable Channel List
	option.

	* src/client.c (client_readmsg): clarified the error message.

	* src/config.c: added support for the new option.
	(partyline_enable_channel_list_changed): handler for the gconf key.
	(config_loadconfig): added code to get the configuration of the new
	option.

	* src/config.h: added the prototype for the new handler.

	* src/dialogs.c: added the UI for the new option.
	(prefdialog_channeltoggle): new handler.
	(prefdialog_new): added code for the new option. Also, modified the
	policy of the keys scrolled window, so you can now horizontally scroll
	it.

	* src/gtetrinet.c (main): added a GConf notification for the new option.

	* src/partyline.c: Added a convenience function for the Enable Channel